objects/ssot__FlowElement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessProcessStepType__c</fullName>
        <label>Business Process Step Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementId__c</fullName>
        <label>[DoNotUse]Flow Element</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowId__c</fullName>
        <label>[DoNotUse]Flow</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowVersionId__c</fullName>
        <label>Flow Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Flow Element Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessBeginTimestamp__c</fullName>
        <label>[DoNotUse]Process Begin Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessEndTimestamp__c</fullName>
        <label>[DoNotUse]Process End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761222555_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowElement_FlowVersionId_map_FlowVe_rel</label>
        <referenceTo>ssot__FlowVersion__dlm</referenceTo>
        <relationshipLabel>FlowElement_FlowVersionId_map_FlowVe_rel</relationshipLabel>
        <relationshipName>rel_1697761222555_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>